# yolo-plugin

./: .gitignore  138.css  138.css.map  138.js  138.js.map  17.js  17.js.map  180.css  180.css.map  180.js  180.js.map  23.js  23.js.map  276.js  276.js.map  594.js  594.js.map  857.js  857.js.map  Cargo.toml  LICENSE  README.md  example.ipynb  index.html  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
.github/workflows/: ci.yml
src/: Widget.vue  bbox.rs  detection.rs  index.js  lib.rs  test.py  yolo.rs
src/yolov8/: mod.rs  model.rs
