[package]
name = "yolo-plugin"
version = "0.1.0"
authors = ["Christian M <chriamue@gmail.com>"]
edition = "2021"
description = "Yolo object detection"
repository = "https://github.com/lenna-project/yolo-plugin"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
python = ["lenna_core/python", "ndarray", "ndarray-image", "numpy", "pyo3", "pythonize"]
plugin = []

[dependencies]
float-ord = "0.3.2"
image = { version = "0.23", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22", default-features = false }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main" }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = { version = "0.15.9-pre", git = "https://github.com/chriamue/tract.git", branch = "patch-1" }
pyo3 = { version = "0.14.1", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.3", optional = true }
ndarray-image = { git = "https://github.com/rust-cv/ndarray-image.git", optional = true }
numpy = { version = "0.14.1", optional = true }
pythonize = { version = "0.14.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]