[package]
name = "lenna_yolo_plugin"
version = "0.1.1"
authors = ["Christian M <chriamue@gmail.com>"]
edition = "2021"
description = "Yolo object detection"
repository = "https://github.com/lenna-project/yolo-plugin"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin", "yolo"]
python = [
    "lenna_core/python",
    "ndarray",
    "ndarray-image",
    "numpy",
    "pyo3",
    "pythonize",
]
plugin = []
yolo = ["tract-onnx"]
yolov8 = ["candle-core", "candle-nn"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle", optional = true }
float-ord = "0.3.2"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23", default-features = false }
kamadak-exif = "0.5"
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main" }
rusttype = "0.9"
pyo3 = { version = "0.16", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.6", optional = true }
ndarray-image = { git = "https://github.com/rust-cv/ndarray-image.git", optional = true }
numpy = { version = "0.16", optional = true }
pythonize = { version = "0.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = { version = "0.20", optional = true }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
